<resources>
    <string name="app_name">Updater</string>

    <!--updater_activity.xml-->
    <string name="checking_update">Checking update</string>
    <string name="update_check_error">Update check error</string>
    <string name="no_update_url">No update url found</string>
    <string name="you_are_on_latest">You are on latest version!</string>
    <string name="no_new_version_desc_tg">No new version available. You may join our telegram group %s for latest news.</string>
    <string name="no_new_version_desc">No new version available.</string>
    <string name="updater">Updater</string>
    <string name="last_tested_android">Last tested Android:</string>
    <string name="status">Status:</string>
    <string name="update_imp_info">Important info:</string>
    <string name="version">Version:</string>
    <string name="install_by_package_manager">Install by package manager</string>
    <string name="install_by_root">Install by root</string>
    <string name="install">Install</string>
    <string name="download">Download</string>

    <!--DownloaderService.kt-->
    <string name="loading">Loading…</string>
    <string name="downloading">Downloading…</string>
    <string name="download_error">Error downloading update</string>
    <string name="download_complete">Download complete</string>
    <string name="click_to_install">Click to install</string>

    <!--UpdaterMain.kt-->
    <string name="host">Host</string>
    <string name="update_complete">Update complete!</string>
    <string name="no_internet">No connection! Please retry after enabling mobile data or Wifi connection.</string>
    <string name="uninstall_this_version">Uninstall this version?</string>
    <string name="uninstall_this_version_desc">New version is downloaded and installed. Click uninstall to remove this old version.</string>
    <string name="uninstall">Uninstall!</string>

    <!--DownloadJob.kt-->
    <string name="download_error_null">Download error NULL</string>

    <string name="error_occurred">Error occurred!!</string>
    <string name="close">Close</string>

</resources>
