<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".UpdaterMain"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/large_padding_width">

        <ImageButton
            android:id="@+id/helpBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/large_padding_width"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/helpBackButton"
            android:padding="@dimen/small_padding_width"
            android:text="@string/updater"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_check_wait_layout"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:visibility="gone"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/small_padding_width"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checking_update"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/large_padding_width"
            android:id="@+id/updater_content"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/update_name"
                        android:textColor="@color/colorAccent"
                        tools:text="Migrate 3.0" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/small_padding_width"/>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:layout_column="1"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_marginStart="@dimen/small_padding_width"
                                android:id="@+id/update_version"
                                tools:text="17"/>

                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/last_tested_android"
                                android:layout_column="1"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_marginStart="@dimen/small_padding_width"
                                android:id="@+id/update_last_android_version"
                                tools:text="10"/>

                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/status"
                                android:layout_column="1"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_marginStart="@dimen/small_padding_width"
                                android:id="@+id/update_status"
                                tools:text="Beta"/>

                        </TableRow>

                    </TableLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/small_padding_width"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_imp_info"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/update_info"
                        tools:text="Update information"
                        />

                </LinearLayout>

            </ScrollView>



            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/xlarge_padding_width"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:id="@+id/update_progress_layout"
                    android:visibility="invisible"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/update_size_in_text"
                        tools:text="0 MB/14 MB"
                        android:layout_gravity="end"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/small_padding_width"/>

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:id="@+id/update_download_progressbar"
                        />

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_padding_width"/>

                <Button
                    android:layout_width="@dimen/updater_button_width"
                    android:layout_height="@dimen/updater_button_height"
                    android:background="@drawable/button_drawable"
                    android:text="@string/download"
                    android:layout_gravity="end"
                    android:id="@+id/update_button_download"
                    android:foreground="?android:attr/selectableItemBackground"
                    />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/xlarge_padding_width"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_by_package_manager"
                        android:id="@+id/update_radio_install_by_pm"

                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_by_root"
                        android:id="@+id/update_radio_install_by_root"
                        />

                </RadioGroup>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/large_padding_width"/>

                <Button
                    android:layout_width="@dimen/updater_button_width"
                    android:layout_height="@dimen/updater_button_height"
                    android:background="@drawable/button_drawable"
                    android:text="@string/install"
                    android:layout_gravity="end"
                    android:id="@+id/update_button_install"
                    android:foreground="?android:attr/selectableItemBackground"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>